fix: icons are not aligned with text

--- a/packages/web-vue/components/menu/style/index.less
+++ b/packages/web-vue/components/menu/style/index.less
@@ -509,6 +509,21 @@
     }
   }
 
+  .@{trigger-menu-prefix-cls}-has-icon {
+    display: flex;
+    align-items: center;
+    line-height: initial;
+
+    > * {
+      flex: none;
+    }
+
+    .@{trigger-menu-prefix-cls}-title {
+      flex: auto;
+      .text-ellipsis();
+    }
+  }
+
   &-pop-header {
     display: flex;
     align-items: center;
